--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -1,9 +1,14 @@
-q=Login already in use
+locale.signin=Sign in
+locale.cancel=Cancel
+locale.authorization=Authorization
 locale.login=Login
 locale.logout=Logout
+locale.registration=Registration
 locale.password=Password
+locale.passwordrepeat=Repeat password
 locale.name=First name
 locale.surname=Last name
+locale.phone=Phone number
 locale.make=Make
 locale.model=Model
 locale.color=Color
