--- a/src/main/resources/locale_kz.properties
+++ b/src/main/resources/locale_kz.properties
@@ -1,1 +1,13 @@
-q=Login qoldanuda
+locale.login=qaz login
+locale.logout=qaz logout
+locale.registration=Registration
+locale.password= qaz Password
+locale.name=First name
+locale.surname=Last name
+locale.make=Make
+locale.model=Model
+locale.color=Color
+locale.engine=Engine
+locale.fuel=Fuel
+locale.body=Body
+locale.year=Year
