ad & vechicle structure

--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -4,15 +4,20 @@ locale.authorization=Авторизация
 locale.login=Логин
 locale.logout=Выйти
 locale.registration=Регистрация
+locale.adpost=Добавить объявление
 locale.password=Пароль
 locale.passwordrepeat=Подтверждение пароля
+locale.match=Соответствуют
+locale.notmatch=Не соотвествуют
 locale.name=Имя
 locale.surname=Фамилия
 locale.phone=Мобильный телефон
 locale.make=Марка
 locale.model=Модель
+locale.makemodel=Марка и модель
 locale.color=Цвет
 locale.engine=Двигатель
 locale.fuel=Топливо
 locale.body=Кузов
 locale.year=г.в.
+locale.makeselect=Выберите марку из списка
