--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -4,15 +4,20 @@ locale.authorization=Authorization
 locale.login=Login
 locale.logout=Logout
 locale.registration=Registration
+locale.adpost=Post ad
 locale.password=Password
-locale.passwordrepeat=Repeat password
+locale.passwordrepeat=Confirm password
+locale.match=Matching
+locale.notatch=Not matching
 locale.name=First name
 locale.surname=Last name
 locale.phone=Phone number
 locale.make=Make
 locale.model=Model
+locale.makemodel=Make and model
 locale.color=Color
 locale.engine=Engine
 locale.fuel=Fuel
 locale.body=Body
 locale.year=Year
+locale.makeselect=Select a brand from the list
