ad & vechicle structure

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -1,5 +1,6 @@
 locale.signin=Sign in
 locale.cancel=Cancel
+locale.save=Save
 locale.authorization=Authorization
 locale.login=Login
 locale.logout=Logout
@@ -15,9 +16,16 @@ locale.phone=Phone number
 locale.make=Make
 locale.model=Model
 locale.makemodel=Make and model
+locale.country=Country
 locale.color=Color
 locale.engine=Engine
+locale.tranmission=Transmission
+locale.wheel=Wheel drive
+locale.price=Price
+locale.city=City
+locale.description=Description
 locale.fuel=Fuel
 locale.body=Body
 locale.year=Year
 locale.makeselect=Select a brand from the list
+locale.photos=Attach photos
