--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -1,5 +1,6 @@
 locale.signin=Вход
 locale.cancel=Отмена
+locale.save=Сохранить
 locale.authorization=Авторизация
 locale.login=Логин
 locale.logout=Выйти
@@ -15,9 +16,17 @@ locale.phone=Мобильный телефон
 locale.make=Марка
 locale.model=Модель
 locale.makemodel=Марка и модель
+locale.country=Страна
 locale.color=Цвет
 locale.engine=Двигатель
+locale.tranmission=КПП
+locale.wheel=Привод
+locale.price=Цена
+locale.city=Город
+locale.description=Описание
 locale.fuel=Топливо
 locale.body=Кузов
 locale.year=г.в.
 locale.makeselect=Выберите марку из списка
+locale.photos=Прикрепить фотографии
+
